<?xml version="1.0" encoding="utf-8"?>
<gbernat.flashlight.controls.VerticalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/appwidget_bg_focused"
    android:gravity="center"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/appwidget_bg_clickable"
                android:onClick="sos"
                android:text="@string/label_sos"
                android:textColor="@color/Orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_enter_mes"
                android:textColor="@color/Red" />

            <gbernat.flashlight.controls.MyEditText
                android:id="@+id/morseCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890.,?"
                android:ems="10"
                android:fadeScrollbars="false"
                android:imeActionId="300"
                android:imeOptions="actionDone"
                android:maxLines="5"
                android:overScrollMode="always"
                android:scrollbarSize="4dp"
                android:scrollbarStyle="insideInset"
                android:scrollbarThumbVertical="@drawable/scrollbar"
                android:scrollbars="vertical" >

                <requestFocus />
            </gbernat.flashlight.controls.MyEditText>

            <TextView
                android:id="@+id/showMorseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:fadeScrollbars="false"
                android:maxLines="7"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="@color/Red"
                android:scrollbarThumbVertical="@drawable/scrollbar"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/appwidget_bg_clickable"
                android:onClick="translate"
                android:text="@string/label_transl_mes"
                android:textColor="@color/Orange"
                android:visibility="gone" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/appwidget_bg_clickable"
                android:onClick="startLights"
                android:text="@string/label_start_lights"
                android:textColor="@color/Orange" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/appwidget_bg_clickable"
                android:onClick="stopLights"
                android:text="@string/label_stop_lights"
                android:textColor="@color/Orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/appwidget_bg_clickable"
                android:onClick="speedMinus"
                android:text="-"
                android:textColor="@color/Orange"
                android:textSize="36sp" />

            <TextSwitcher
                android:id="@+id/textSwitcher1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >
            </TextSwitcher>

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/appwidget_bg_clickable"
                android:onClick="speedPlus"
                android:text="+"
                android:textColor="@color/Orange"
                android:textSize="36sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_speed"
            android:textColor="@color/Red" />
    </LinearLayout>

</gbernat.flashlight.controls.VerticalScrollView>