<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  
  android:layout_margin="4dp"
  android:minHeight="40dp"
  android:minWidth="110dp"
 
  
  android:background="@drawable/appwidget_bg_focused">
 <!--  android:background="@drawable/appwidget_bg_clickable">--> 
 <!--   <TextView android:id="@+id/widget1label" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content"/>-->
<!-- 
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/appwidget_bg_clickable" />
 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:gravity="center"
            android:orientation="horizontal" >
            <!--
              <Button
                android:id="@+id/buttonik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click Me!" />
            -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/Red" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:background="@drawable/power_off"
                    android:scaleType="fitCenter" />

                

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="7dp" >

                <Button
                    android:id="@+id/buttonGoToApp"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:background="@drawable/appwidget_bg_clickable"
                    android:text="@string/label_go_to_app"
                    android:textColor="@color/Orange"
                    android:textSize="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:gravity="bottom" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_bat_st"
                        android:textColor="@color/Red"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/textViewBatterySt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="3dp"
                        android:text="%"
                        android:textColor="@color/Red"
                        android:textSize="10dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
 
</LinearLayout>